chore: Added alt for pictures, fixed testimonial section not being aligned correctly, added decorations on the footer

--- a/style.css
+++ b/style.css
@@ -355,8 +355,6 @@ h1 {
 /* Testimonial */
 .testimonial {
     display: grid;
-    height: 1280px;
-    min-width: 2236px;
     grid-template-columns: 2fr 1fr 6fr 4fr 6fr 1fr 2fr;
     grid-template-rows: 1fr 1fr 1fr 6fr 1fr 1fr 1fr;
 
@@ -371,6 +369,8 @@ h1 {
     column-gap: 32px;
     grid-template-columns: 10fr 10fr 10fr 10fr 10fr;
     grid-template-rows: 1fr 9fr 1fr;
+    grid-row: 4;
+    grid-column: 1 /span 7;
 }
 
 .commentary {
@@ -384,9 +384,10 @@ h1 {
 .ttl {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     gap: 20px;
+    grid-column: 4;
+    grid-row: 2;
 }
 
 .userinfo {
@@ -455,6 +456,8 @@ h1 {
 .newsletters {
     display: flex;
     padding: 150px 125px;
+    justify-content: space-between;
+    gap: 10vw;
 
 }
 
@@ -529,4 +532,10 @@ footer .blue-box {
         display: flex;
         flex-direction: row;
     }
+}
+
+.footer_circle {
+    z-index: -1;
+    grid-row: 1 / 2;
+    grid-column: 1;
 }
